# stlite-vite-template

./: .gitignore  README.md  README.zh-CN.md  app_async.py  config.js  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
.streamlit/: config.toml
backend/: __init__.py
scripts/: build.mjs  build_functions.mjs
src/: app.py  main.js
src/backend/: __init__.py
